--- a/app/src/main/res/layout/fragment_random.xml
+++ b/app/src/main/res/layout/fragment_random.xml
@@ -212,6 +212,7 @@
         app:layout_constraintTop_toBottomOf="@id/ll_first" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/ll_settings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_btn"
