--- a/app/src/main/res/layout/item_result_game.xml
+++ b/app/src/main/res/layout/item_result_game.xml
@@ -1,49 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
-    android:layout_marginTop="16dp"
     android:layout_marginHorizontal="16dp"
-    android:orientation="horizontal">
+    android:layout_marginTop="16dp"
+    android:background="#FEF7FF">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/iv_team_a"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginHorizontal="8dp"
+            android:src="@drawable/ic_unknown" />
+
+        <TextView
+            android:id="@+id/tv_score_a"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="8dp"
+            android:fontFamily="@font/gilroy_regular"
+            android:text="8"
+            android:textSize="24sp" />
+
+        <ImageView
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_marginHorizontal="4dp"
+            android:src="@drawable/ic_vs_logo" />
+
+        <TextView
+            android:id="@+id/tv_score_b"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="8dp"
+            android:fontFamily="@font/gilroy_regular"
+            android:text="8"
+            android:textSize="24sp" />
+
+        <ImageView
+            android:id="@+id/iv_team_b"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginHorizontal="8dp"
+            android:src="@drawable/ic_unknown" />
+
+    </LinearLayout>
 
     <ImageView
-        android:id="@+id/iv_team_a"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_marginHorizontal="8dp"
-        android:src="@drawable/ic_unknown" />
+        android:id="@+id/iv_check"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:padding="4dp"
+        android:src="@drawable/ic_check"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_score_a"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/gilroy_regular"
-        android:text="8"
-        android:layout_marginHorizontal="8dp"
-        android:textSize="24sp" />
-
-    <ImageView
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:layout_marginHorizontal="4dp"
-        android:src="@drawable/ic_vs_logo" />
-
-    <TextView
-        android:id="@+id/tv_score_b"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/gilroy_regular"
-        android:text="8"
-        android:layout_marginHorizontal="8dp"
-        android:textSize="24sp" />
-
-
-    <ImageView
-        android:id="@+id/iv_team_b"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_marginHorizontal="8dp"
-        android:src="@drawable/ic_unknown" />
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
