--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -86,8 +86,12 @@
         app:layout_constraintTop_toBottomOf="@id/cv_category_league">
 
         <LinearLayout
+            android:id="@+id/ll_category_championship"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="?attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
             android:orientation="horizontal">
 
             <ImageView
